test/files/neg/t1431.check
t1431.scala:8: error: class type required but X#Factory found
  def fun[X<:MyTrait with Singleton]() = new X#Factory().value
                                               ^
one error found
